# dehn_hack

./: .env  .gitignore  README.md  Test from WhatsApp Business.ipynb  dhen.db  index.py  input_database.ipynb  main.py  pyproject.toml  tempCodeRunnerFile.py  test.py
src/data/: Bibliothek Baukasten Matrix.csv  Challenge 2 Drop-Down Menus.csv  Challenge 2_Baukasten.csv  baukasten.csv  losungbib.csv
src/tool/: db.py  encoding_model.py  load_env.py  query_search.py
src/ui/: setupui.py
